objects/tc9_p__Superannuation_Fund__c.object
<CustomObject>
    <fields>
        <fullName>SMSF_Trustee_Dec__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To capture smsf acknowledgement in portal</description>
        <label>SMSF Trustee Declaration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Super_Search_Field__c</fullName>
        <formula>tc9_p__Fund_Name__c + &apos; --- USI: &apos; + tc9_p__Unique_Superannuation_Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Super Search Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customFund_Website__c</fullName>
        <label>Fund Website</label>
        <type>Url</type>
    </fields>
</CustomObject>